--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
       }
 
       #app {
         overflow: hidden;
+        background-color: rgb(255, 255, 255);
+
+        background-image: url("/images/grid.png");
+        background-size: 35%;
       }
     </style>
   </head>
